--- a/index.html
+++ b/index.html
@@ -58,37 +58,22 @@
     <h1>PPC Africa – Homepage Mockup Showcase</h1>
 
     <div class="row g-4">
-      <!-- Official PPC Website -->
-      <div class="col-md-4">
-        <div class="mockup-card">
-          <img src="https://www.ppc.africa/media/52lhm2o0/global-homeimage-cropped.jpg" alt="PPC Official">
-          <div class="card-body text-center">
-            <h5 class="fw-bold">Official PPC Africa</h5>
-            <p>The live corporate site showcasing PPC’s real web design, visuals, and content.</p>
-            <a href="https://www.ppc.africa/" target="_blank" class="btn btn-view px-4">Visit Live Site</a>
-          </div>
-        </div>
-      </div>
-
       <!-- Replica Demo -->
       <div class="col-md-4">
         <div class="mockup-card">
-          <img src="https://placehold.co/600x200/ed1b24/ffffff?text=PPC+Replica+Demo" alt="Replica Demo">
+          <img src="https://placehold.co/600x200/ed1b24/ffffff?text=Replica+Demo" alt="Replica Demo">
           <div class="card-body text-center">
-            <h5 class="fw-bold">Replica Demo</h5>
             <p>A custom-built local replica inspired by PPC Africa, recreated with HTML, CSS, and Bootstrap.</p>
             <a href="replica-index.html" target="_blank" class="btn btn-view px-4">Open Replica</a>
           </div>
         </div>
       </div>
-      
 
       <!-- Modern -->
       <div class="col-md-4">
         <div class="mockup-card">
-          <img src="https://placehold.co/600x200/f8f8f8/222?text=Modern+Mockup" alt="Modern">
+          <img src="https://placehold.co/600x200/f8f8f8/222?text=Demo+One" alt="Modern">
           <div class="card-body text-center">
-            <h5 class="fw-bold">Demo One</h5>
             <p>A clean, professional design emphasizing white space and clarity.</p>
             <a href="index-modern.html" target="_blank" class="btn btn-view px-4">View Design</a>
           </div>
@@ -98,9 +83,8 @@
       <!-- Industrial -->
       <div class="col-md-4">
         <div class="mockup-card">
-          <img src="https://placehold.co/600x200/e41e26/ffffff?text=Industrial+Bold" alt="Industrial">
+          <img src="https://placehold.co/600x200/e41e26/ffffff?text=Demo+Two" alt="Industrial">
           <div class="card-body text-center">
-            <h5 class="fw-bold">Demo Two</h5>
             <p>Vibrant red gradients, angled sections, and animated counters.</p>
             <a href="index-industrial.html" target="_blank" class="btn btn-view px-4">View Design</a>
           </div>
@@ -110,9 +94,8 @@
       <!-- Global -->
       <div class="col-md-4">
         <div class="mockup-card">
-          <img src="https://placehold.co/600x200/dedede/333?text=Global+Interactive" alt="Global">
+          <img src="https://placehold.co/600x200/dedede/333?text=Demo+Three" alt="Global">
           <div class="card-body text-center">
-            <h5 class="fw-bold">Demo Three</h5>
             <p>Split-screen hero with an Africa map and animated global reach pins.</p>
             <a href="index-global.html" target="_blank" class="btn btn-view px-4">View Design</a>
           </div>
